--- a/適合帶上山的食材/加工食品.md
+++ b/適合帶上山的食材/加工食品.md
@@ -3,11 +3,8 @@
 ### 飲料
 
 + 茶包
-
 + 耳掛咖啡
-
 + 湯包
-
 + 美祿
 
 ### 真空包裝
@@ -19,10 +16,14 @@
 + 肉鬆
 + 臘肉
 
+### 乾燥水果片
+
++ 乾燥香蕉
++ 乾燥蘋果
+
+
 ### 義美蛋糕
 
 + [義美芝士蛋糕](https://imec.imeifoods.com.tw/Product.aspx?ProductGuid=6de138f5-5b97-482d-8909-f9d1f0b3fb01)
-
 + [義美巧克力蛋糕](https://imec.imeifoods.com.tw/Product.aspx?ProductGuid=31a7c4eb-3862-42e1-869f-f1debaab9707)
-
 + [義美蜂蜜蛋糕](https://imec.imeifoods.com.tw/Product.aspx?ProductGuid=dbc74ce3-d81e-4e89-9929-0e580cdae236)
