--- a/適合帶上山的食材/加工食品.md
+++ b/適合帶上山的食材/加工食品.md
@@ -11,15 +11,22 @@
 
 + 德國香腸
 
-### 乾燥食品
+### 乾燥肉
 
 + 肉鬆
 + 臘肉
++ 肉乾
 
-### 乾燥水果片
+### 乾燥水果
 
 + 乾燥香蕉
 + 乾燥蘋果
+
+### 乾燥蔬菜
+
++ 乾燥芋頭
+
+
 
 
 ### 義美蛋糕
