--- a/適合帶上山的食材/加工食品.md
+++ b/適合帶上山的食材/加工食品.md
@@ -1,32 +1,50 @@
 # 加工食品
 
 ### 飲料
-
 + 茶包
 + 耳掛咖啡
 + 湯包
 + 美祿
 
 ### 真空包裝
-
 + 德國香腸
 
 ### 乾燥肉
-
 + 肉鬆
-+ 臘肉
 + 肉乾
++ 臘肉
+
 
 ### 乾燥水果
-
 + 乾燥香蕉
 + 乾燥蘋果
 
-### 乾燥蔬菜
+### 果乾
++ 芒果乾
++ 蔓越莓
++ 芭樂乾
++ 葡萄乾
++ 蜜餞
 
+
+### 乾燥蔬菜
 + 乾燥芋頭
 
-###
+### 乾貨
++ 香菇
++ 紫菜
++ 海帶芽
+
+### 包裝食品
++ 豆干
++ 餅乾
++ 巧克力
++ 糖果
+
+### 堅果
++ 花生
++ 各式堅果
+
 
 ### 義美蛋糕
 
