--- a/適合帶上山的食材/加工食品.md
+++ b/適合帶上山的食材/加工食品.md
@@ -14,7 +14,6 @@
 + 肉乾
 + 臘肉
 
-
 ### 乾燥水果
 + 乾燥香蕉
 + 乾燥蘋果
@@ -25,7 +24,6 @@
 + 芭樂乾
 + 葡萄乾
 + 蜜餞
-
 
 ### 乾燥蔬菜
 + 乾燥芋頭
@@ -45,6 +43,10 @@
 ### 堅果
 + 花生
 + 各式堅果
+
+### 果醬
++ 花生醬
++ 果醬
 
 
 ### 義美蛋糕
