--- a/食譜/晚餐/打拋豬肉麵線.md
+++ b/食譜/晚餐/打拋豬肉麵線.md
@@ -1,3 +1,10 @@
 # 打拋豬肉麵線
 
 ![](https://lh3.googleusercontent.com/3Du_3_stmUZy0c6QL1NNhPg4CEz4rBUePo_-fAYgIQl-8TbUXsgmeee9mTZ_icWvuX8-ib-EJLr1Y1rn3_MPAQiXTUPMfnzcsjFXdfuNZdiHcJyzTzQmOt9io-3zgcZJc-cC6CJ7rHR0xmb8yGhz2iSwmM7dzanuciYxwCXHygsgmjm9eJlC7ucaX5_4Oq1G5euIoCvNtOHjA7KSzedmWRlrZ_XwLSlCyl6evBWIp_WM6HpC6sEIfzzdOrGmnx6wr_FDEi7Wip6J8Qy0K-grRAynzeJmEf8l7xu_5-l72SvYyzXlcEF11Td5sKRmrp8Pzgb8hqqQFzxa0shS3qML6O-YvrWrPwE6rrht-A0fhbDpLBrJXQeI2dSXkqWbCr9gtAj0LUN2CNBLxTsCQj0repK1zx-Bvkv2_vJ0D6DhWr-6hOqZldV7gpIvHalLuWNBxgye3VezfQOpKHnz3Zad-e6RiCzmNHQQMy8BnPXkl6yDmZK_rKn3paKefj2ncHnCJ3olVAL9_gYILnG0GkvMOM2DIXrc6EC4AxriceGvWUCAT1UIqObyRZx_-3dGA23TQvJn7hhlBGA6vAc6_Zf8cnSMYM0pPCt1WHeIJde_2Yc=w1902-h1426-no)
+
+### 材料
++ 豬絞肉
++ 九層塔(摘葉子就好)
++ 番茄(切一小口狀)
++ 辣椒(切碎末)
++ 大蒜(切碎末)
