--- a/食譜/晚餐/葷/紹子麵.md
+++ b/食譜/晚餐/葷/紹子麵.md
@@ -1,3 +1,9 @@
 https://icook.tw/recipes/103737
 
 不要加蛋，蛋容易腐敗。
+
+豬肉可以換成雞胸肉
+
+雞胸肉的料理方式如下
+
+https://www.youtube.com/watch?v=1yLkyjRPfWY&feature=youtu.be
