--- a/食譜/晚餐/葷/泰式番茄鴨血米線.md
+++ b/食譜/晚餐/葷/泰式番茄鴨血米線.md
@@ -1,1 +1,1 @@
-![泰式番茄鴨血米線](https://llw007.pixnet.net/blog/post/52643976-%E9%BA%B5%E9%A3%9F--%E7%B1%B3%E7%B7%9A----%E6%B3%B0%E5%8C%97%E9%B4%A8%E8%A1%80%E6%B9%AF%E7%B1%B3%E7%B7%9A)
+[泰式番茄鴨血米線](https://llw007.pixnet.net/blog/post/52643976-%E9%BA%B5%E9%A3%9F--%E7%B1%B3%E7%B7%9A----%E6%B3%B0%E5%8C%97%E9%B4%A8%E8%A1%80%E6%B9%AF%E7%B1%B3%E7%B7%9A)
